== 1.2.7.1 (in development)

== 1.2.7 (2010-02-01)

=== Major Changes
* New option --yaml reports smells in YAML format
* Now require 'reek/rake/task' to use the rake task
* Now require 'reek/spec' to use the Rspec matchers
* Developer API completely revised and documented

=== Minor Changes
* New smell: Irresponsible Module (has no meaningful comment)
* ControlCouple no longer checks arguments yielded to blocks
* FeatureEnvy and UtilityFunction are now subclasses of a new smell: LowCohesion
* NestedIterators now reports the nesting depth
* Fixed problem checking for UtilityFunctions in Object
* Improved detection of invalid config files
* Invalid config files are now ignored
* Non-existent files are now ignored

See http://wiki.github.com/kevinrutherford/reek for further details.

== 1.2.6 (2009-11-28)

=== Minor Changes
* Corrected display of module methods to use # (#56)

== 1.2.5 (2009-11-19)

=== Minor Changes
* Ignores ruby_parser errors and pretends the offending file was empty

== 1.2.4 (2009-11-17)

=== Major Changes
* The -f, -c and -s options for formatting smell warnings have been removed

=== Minor Changes
* ControlCouple now warns about parameters defaulted to true/false

== 1.2.3 (2009-11-2)

=== Minor Changes
* New smell: Attribute (disabled by default)
* Expanded DataClump to check modules (#9)
* Fixed LargeClass to ignore inner classes and modules
* Fixed LargeClass to ignore singleton methods
* Removed support for MyClass.should_not reek due to ParseTree EOL
* Removed internal requiring of 'rubygems'

== 1.2.1 (2009-10-02)

=== Minor Changes
* New smell: Class Variable

See http://wiki.github.com/kevinrutherford/reek for details

== 1.2 2009-09-20

=== Major Changes
* Reek passes all its tests under ruby 1.8.6, 1.8.7 and 1.9.1 (fixed #16)
* New smell -- Data Clump:
** Looks within a class for 3 or more methods taking the same 2 or more parameters
* New smell -- Simulated Polymorphism: